--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,25 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background: green;
+}
+.card {
+  width: 250px;
+  height: 350px;
+  background-color: white;
+  border-radius: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 15px;
+  margin-top: 50px;
+  font-size: 50px;
+}
+#iconoArriba {
+  align-self: flex-start;
+}
+#iconoAbajo {
+  transform: rotate(180deg);
+  align-self: flex-end;
+}
